finish book init version