@@ -28,7 +28,28 @@
             <compilerarg line="--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED" />
             <compilerarg line="--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED" />
             <compilerarg line="--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED" />
+            <compilerarg line="--add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED" />
         </javac>
+    </target>
+
+    <target name="compileClient" depends="compile">
+        <javac encoding="utf-8"
+               srcdir="${src.dir}"
+               destdir="${classes.dir}"
+               includeantruntime="false"
+               defaultexcludes="yes"
+               excludes="annotationprocessing/*.java"
+               source="14"
+               target="14">
+            <classpath refid="project.class.path"></classpath>
+            <compilerarg line="-processor annotationprocessing.MyDataAnnotationProcessor" />
+        </javac>
+    </target>
+
+    <target name="runUser" depends="compileClient">
+        <java classname="client.User">
+            <classpath refid="project.class.path"></classpath>
+        </java>
     </target>
 
     <target name="clean">
